# Autonomous-Driving-RyCSV

./: .gitignore  CMakeLists.txt  README.md  package.xml
Test_Camera/: find_lines.py
config/: control_params.yaml  controller.cfg
launch/: sim_racetrack.launch  simulation_base.launch
scripts/: control.py  controlador.py  lane_detection.py  motion_control.py  motion_node.py  oval_traj_gen.py  vision_node.py
