<?xml version="1.0"?>
<package format="2">
  <name>auto_drive_rycsv</name>
  <version>0.2.0</version>
  <description>Autonomous driving application for RyCSV proyect</description>

  <maintainer email="jhkrejcim@unal.edu.co">JurgenHK</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/JurgenHK/Autonomous-Driving-RyCSV</url> 

  <author email="jhkrejcim@unal.edu.co"> Jurgen Krejci </author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>

  </export>

</package>
